<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/item_drawer_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/orange"
        android:title="@string/home" />
    <item
        android:id="@+id/item_drawer_calendar"
        android:icon="@drawable/ic_calendar"
        android:iconTint="@color/orange"
        android:title="@string/calendar" />
    <item
        android:id="@+id/item_drawer_report"
        android:icon="@drawable/ic_report"
        android:iconTint="@color/orange"
        android:title="@string/report" />
    <item
        android:id="@+id/item_drawer_notebook"
        android:iconTint="@color/orange"
        android:icon="@drawable/ic_notebooklm"
        android:title="@string/notebooklm" />
    <group>
       <item android:title="@string/drawer_export">
           <menu>
               <item
                   android:id="@+id/item_drawer_pdf"
                   android:icon="@drawable/ic_pdf"
                   android:iconTint="@color/orange"
                   android:title="@string/drawer_export_pdf" />

               <item
                   android:id="@+id/item_drawer_excel"
                   android:icon="@drawable/ic_excel"
                   android:iconTint="@color/orange"
                   android:title="@string/drawer_export_excel" />

           </menu>
       </item>
    </group>
    <group>
        <item android:title="@string/drawer_other">
            <menu>
                <item
                    android:id="@+id/item_drawer_share"
                    android:icon="@drawable/ic_share"
                    android:iconTint="@color/orange"
                    android:title="@string/drawer_share" />
                <item
                    android:id="@+id/item_drawer_infor"
                    android:icon="@drawable/ic_information"
                    android:iconTint="@color/orange"
                    android:title="@string/drawer_infor_app" />
                <item
                    android:id="@+id/item_drawer_faq"
                    android:icon="@drawable/ic_faq"
                    android:iconTint="@color/orange"
                    android:title="@string/drawer_faq" />
            </menu>
        </item>
    </group>
    <group>
        <item android:title="@string/drawer_account">
            <menu>
                <item
                    android:id="@+id/item_drawer_account"
                    android:icon="@drawable/ic_people"
                    android:iconTint="@color/orange"
                    android:title="Tài Khoản" />
            </menu>
        </item>
    </group>
</menu>