<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.qltc.finace.view.main.home.ShareHomeViewModel" />
        <variable
            name="listener"
            type="com.qltc.finace.view.main.home.income.IncomeListener" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/income"
            android:textColor="@color/black80"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pick_time"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:onClick="@{v->listener.openDayPicker()}"
            android:background="@drawable/bg_money_input"
            android:orientation="horizontal"
            android:textSize="@dimen/sp16"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/input_money"
            app:layout_constraintTop_toTopOf="@+id/textView">

        </com.google.android.material.textview.MaterialTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/date"
            android:textColor="@color/black80"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textColor="@color/black80"
            android:textSize="@dimen/sp16"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_submit"
            android:text="Thêm"
            app:iconGravity="textStart"
            android:layout_marginHorizontal="@dimen/dp30"
            android:onClick="@{v-> listener.submitIncome()}"
            android:enabled="@{viewModel.isEnableButtonAddIncome()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_income" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_money"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_money_input"
            android:drawableEnd="@drawable/ic_money_expense"
            android:hint="0"
            android:text="@={viewModel.moneyIncome}"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3">

        </com.google.android.material.textfield.TextInputEditText>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/note"
            android:textColor="@color/black80"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_note"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/note"
            android:textSize="@dimen/sp14"
            android:text="@={viewModel.noteIncome}"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/input_money"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_money"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_income"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="@{v -> listener.openDayPicker()}"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/pick_time"
            app:layout_constraintEnd_toStartOf="@+id/pick_time"
            app:layout_constraintStart_toStartOf="@+id/input_money"
            app:layout_constraintTop_toTopOf="@+id/pick_time"
            app:srcCompat="@drawable/ic_calendar_month" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>